<resources>
    <string name="app_name">Monitor</string>
    <string name="title">Heart Monitor</string>
    <string name="unknown_device">unknown_device</string>
    <string name="add_widget">Add widget</string>
    <string name="user">User</string>
    <string name="device">Device</string>
    <string name="connect">Add Device</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="clean">Clean</string>
    <string name="comment">Comment</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="remember">Remember Credentials</string>
    <string name="moviment">Movement Data</string>
    <string name="heart">Heart Rate Data</string>
    <string name="dispositiu">Device</string>
    <string name="comentaris">Comments</string>
    <string name="sendto">Sento to the Server</string>
</resources>
